# Engine

./: .gitignore  CMakeLists.txt  engine.cpp  engine.h  main.cpp  platform.h
cmake/: CompileShaders.cmake  Dependencies.cmake
engine/: engine.cpp  engine.h  engine_component_factory.cpp  engine_component_factory.h
engine/pipeline/: graphics_pipeline_supports.cpp  graphics_pipeline_supports.h
engine/queue/: queue_factory.cpp  queue_factory.h
engine/shader/: render_pass.cpp  render_pass_supports.h  shaders.h
engine/swapchain/: swapchain_supports.cpp  swapchain_supports.h
engine/util/: binary_file_utils.cpp  binary_file_utils.h  validations.cpp  validations.h
engine/utils/: file_utils.cpp  file_utils.h  validations.cpp
utils/: classic_string.h  validations.cpp  validations.h
